2013-07-02 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix dates in change log
	* Follow-up to t3lib_div::intval_positive not available in TYPO3 6.0 in tx_srfeuserregister_data

2013-07-01 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix bug #41827: enableAdminNotifyOnUpdate=1 produces wrong dmailCategories values in E-Mail
	* Fix bug #44151: ###BACK_URL### not working, looses Parameters and possible wrong character encoding
	* Fix bug #41321: Clicking cancel on the account deletion confirmation pages causes a 404 error with internet explorer
	* Fix bug #46429: Empty Form after cancelling delete Form
	* Fix issue #49426: addGlobalMarkers: wrong conditions
	* Fix issue #37022: Empty form security token
	* Fix issue #39069: Check pid of fe-users in function login (Thanks to Georg Schönweger)
	* Fix issue with confirmType in setfixed url
	* Correct function name in tx_srfeuserregister_setfixed->computeUrl
	* Fix issue #37046: JavaScript for updateForm() doesn't respect formFields setting
	* Fix issue #40079: Can't edit password when password is required in edit mode
	* Correction to the manual
	* Fix issue #40548: Show password_again as required field on registration form
	* Fix issue #39560: Added single checkbox always checked
	* Follow-up to issue #39560: Added single checkbox always checked

2013-06-29 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix bug #46080: BE log error after change PHP5.2 -> PHP5.3
	* Fix bug #41799: Title in fe_groups_language_overlay is too short

2013-06-27 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Revert Revision 67451: Do not expose autologin private key

2013-06-26 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Revert Revision 66556: Require saltedpasswords to be installed
	* Revert Revision 66559: Require felogin, rsaauth and saltedpasswords
	* Revert Revision 66567: Always check for required rsaauth
	* Fix t3lib_div::intval_positive not available in TYPO3 6.0 in tx_srfeuserregister_data
